--- a/plugin/assets/menu.css
+++ b/plugin/assets/menu.css
@@ -60,6 +60,7 @@ hr{
     background-color: #000000;
     border: 1px solid #ddd;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+    z-index: 1000;
 }
 
 .scenesAccordion {
